WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300761
Unreviewed, speculative fix for DFG crash
https://bugs.webkit.org/show_bug.cgi?id=300761
Summary
Unreviewed, speculative fix for DFG crash
Yusuke Suzuki
Reported
2025-10-14 18:41:46 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-14 18:41:53 PDT
<
rdar://problem/162647547
>
Yusuke Suzuki
Comment 2
2025-10-14 18:44:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52353
EWS
Comment 3
2025-10-14 19:28:18 PDT
Committed
301522@main
(add4b30ec374): <
https://commits.webkit.org/301522@main
> Reviewed commits have been landed. Closing PR #52353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug