Unreviewed, speculative fix for DFG crash https://bugs.webkit.org/show_bug.cgi?id=300761 rdar://162647547

Do speculative fix for these cases. insertChecks should be done after
deciding we will definitely inline them.

* Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleIntrinsicCall):

Canonical link: https://commits.webkit.org/301522@main